Update לעבוד בגן ילדי הטבע “לעבוד-בגן-ילדי-הטבע”

--- a/content/work-in-gan/לעבוד-בגן-ילדי-הטבע.md
+++ b/content/work-in-gan/לעבוד-בגן-ילדי-הטבע.md
@@ -9,7 +9,7 @@ subtitle: "צוות המחנכות והמחנכים שלנו מורכב מחבו
   והתפתחות. אנחנו מקיימים לאורך השנה שני סמינרים והעשרות מקצועיות קבועות אחת
   לחודש כדי שנוכל כצוות לעבד את החוויה החינוכית, לגבש את הזהות האישית ולפתח את
   היכולת המקצועית שלנו באמצעות רכישת ידע, מיומנויות וכלים. ובלי קשר, פאן לנו
-  במאקסימום כאן. "
+  במקסימום כאן. "
 tadmitVideo: https://www.youtube.com/watch?v=SVe2cxA6PqU
 tadmitVideoTitle: "לעבוד איתנו be like:"
 teamGalleryTitle: ""
@@ -19,13 +19,12 @@ teamList:
     lastName: " "
     role: " "
     description: >
-      ילדי הטבע הוא הרבה יותר מגן, הוא בית, הוא מקום לצמוח ולגדול.
+      ילדי הטבע הוא הרבה יותר מגן, הוא בית, הוא מקום לצמוח ולגדול בו. התחלתי את
+      דרכי בגן לפני 8 שנים, כשהוא עוד היה גן קטן וצעיר ואני פשוט גננת. עם השנים
+      הגיעה צמיחה, גדילה והבנה משותפת שחינוך לגיל הרך הוא חשוב, חיוני וכל כך
+      מספק. 
 
-      התחלתי את דרכי עם הגן לפני 8 שנים, כשהוא עוד היה גן קטן וצעיר ואני פשוט גננת.
-
-      עם השנים הגיעה צמיחה, גדילה והבנה משותפת שחינוך לגיל הרך הוא חשוב, חיוני וכל כך מספק. 
-
-      היום זה כבר לא רק גן אלה גם מרכז מקצועי לחינוך לגיל הרך וזה בזכות היכולת של המקום להגמיש, לחנך, ללמד ולשים לב לכל אחד ואחת שבוחרים ובוחרות להכניס למערכת הזו גם בפן האישי וגם בפן המקצועי.
+      היום זה כבר לא רק גן אלה גם מרכז מקצועי לחינוך לגיל הרך וזה בזכות הגמישות של המקום ללמוד, לחנך, ללמד ולשים לב לכל אחד ואחת שבוחרים ובוחרות להיכנס למערכת הזו גם בפן האישי וגם בפן המקצועי.
     index: 0
     img: /assets/pics/uploads/גן-ילדי-הטבע-הדמוקרטי-צוות-הבוגרים-2020-21-צילום-ערן-לם-19-1-.jpg
   - lastname: פריזיאן
@@ -36,12 +35,13 @@ teamList:
     title: הילה
     firstname: ניר
     firstName: הילה
-    description: >
+    description: >-
       לגן ילדי הטבע הגעתי באמצע השנה שעברה ומהשניה הראשונה הרגשתי חיבוק אדיר.
+      המקום הזה הוא פשוט מקום עבודה קסום שמתנהל בצורה כל כך מקצועית ונותן תמיכה
+      אישית - רגשית ומקצועית יחד! אני מרגישה בת מזל להיות חלק מהארגון הזה, ללמוד
+      ולהתפתח. 
 
-      המקום הזה הוא פשוט מקום עבודה קסום שמתנהל בצורה כל כך מקצועית ונותן תמיכה אישית- רגשית ומקצועית יחד! אני מרגישה ברת מזל להיות חלק מהארגון הזה, ללמוד ולהתפתח. 
-
-      המקום הזה מאפשר לי לשלב תחומים נוספים שאני מפתחת, תחושת סיפוק ומשמעות אדירה, אפשרויות למידה וצמיחה ולהביא את עצמי לידי ביטוי. הצוות מורכב מדמויות מעוררות השראה, עמיתות מופלאות וחברות מדהימות. הצוות הניהול הם אנשים מדהימים שנותנים תחושה נעימה, שרואים אותנו ודואגים לנו לא רק בהיבט המקצועי. הגן הזה הוא באמת ה- Next Level של החינוך עד לפרטים הכי קטנים בהתנהלות שלו.
+      המקום הזה מאפשר לי לשלב תחומים נוספים שאני מפתחת, תחושת סיפוק ומשמעות אדירה, אפשרויות למידה וצמיחה ולהביא את עצמי לידי ביטוי. הצוות מורכב מדמויות מעוררות השראה, עמיתות מופלאות וחברות מדהימות. צוות הניהול הם אנשים מדהימים שנותנים תחושה נעימה, שרואים אותנו ודואגים לנו לא רק בהיבט המקצועי. הגן הזה הוא באמת ה- Next Level של החינוך עד לפרטים הכי קטנים בהתנהלות שלו.
 
       אין לי ספק שכל מי שי/תגיע לעבוד כאן י/תזכה!
   - title: " חוה"
@@ -50,12 +50,12 @@ teamList:
     img: /assets/pics/uploads/גן_ילדי_הטבע_הדמוקרטי_צוות_צעירים_-_צילום_לנס_הפקות_99-1-.jpg
     index: 2
     role: " "
-    description: >
-      מבחינתי לעבוד בגן ילדי הטבע זה להיות במקום שלך אכפת ממנו ולו אכפת ממך. 
+    description: >-
+      מבחינתי לעבוד בגן ילדי הטבע זה להיות במקום שלך אכפת ממנו ולו אכפת ממך.
+      הגעתי לגן אחרי עבודה בגנים אחרים וגיליתי עולם שלם שמראה שאפשר לעשות דברים
+      אחרת. גיליתי 
 
-      הגעתי לגן אחרי עבודה בגנים אחרים וגיליתי עולם שלם שמראה שאפשר לעשות דברים אחרת. גיליתי 
-
-      שיש מקום שאכפת לכולם באמת מהילדים ומהצוות. מקום שאת יכולה להרגיש שלהנהלה אכפת ממך ולא רק מעצמה. כאן זה שונה, הם תמיד בשבילך... תמיד שם. גם כשאת לא אומרת או מראה הם רואים אותך ושמים לב לדברים הקטנים. להכנס לפה זה לזכות במשפחה שניה. לדעת שאת מגיעה לכאן, לא משנה מי ומה את, הם מקבלים אותך, עוזרים לך למצוא את המקום שלך, לצמוח ולהתפתח. 
+      שיש מקום שאכפת לכולם באמת מהילדים ומהצוות. מקום בו את יכולה להרגיש שלהנהלה אכפת ממך ולא רק מעצמה. גם כשאת לא אומרת או מראה, רואים אותך ושמים לב לדברים הקטנים. להכנס לפה זה לזכות במשפחה שניה. לדעת שכשאת מגיעה לכאן, מקבלים אותך, עוזרים לך למצוא את המקום שלך, לצמוח ולהתפתח. 
 
 
       כשהגעתי קצת חששתי. אמרתי לעצמי "בסדר עוד גן עם המון צוות ומה כבר יכול להיות?" ברגע האמת? זה לגמרי היה אחרת. קיבלנו אותי עם חיוך וגרמו לי להרגיש הכי טוב שיש והכי שייכת. ילדי הטבע הדמוקרטי הוא מקום שאני מרגישה שתמיד אפשר ללמוד, לעלות ולהתקדם בו. היום אני יכולה להגיד בלב שלם שאני יודעת שאני במקום הנכון בשבילי ואני מגיעה בכל בוקר עם חיוך לעבודה.
@@ -65,13 +65,13 @@ teamList:
     img: /assets/pics/uploads/חן-3.png
     index: 3
     role: " "
-    description: >
+    description: >-
       אני חושבת שהמילה שמסכמת יותר מכל את התחושה שיש לי מהעבודה בגן היא -
       סיפוק. 
 
-      זה נכון שאני עושה את מה שאני אוהבת, אבל אהבה למקצוע לבדה לא מספיקה לתחושת סיפוק (בטוח שלא לאורך זמן). אני חושבת שבגן יש לי את התחושה הזו באופן כל כך ברור כי יש בו צוות ניהולי שרואה, מעריך ויודע להביע את הערכה ולתגמל על העבודה שלי. יש מי שמכוון אותי כך שיש לי אפשרות לצמוח ולהשתפר בכל פעם מחדש. אחרי 3 ומשהו שנים באותו מקצוע ובאותו "תפקיד זוטר" אני עדיין מתפלאת איך הצמיחה שלי בגן היא לא רק כעובדת אלא גם כבת אדם. הצמיחה היא ממש לרוחב, דרך כל מיני תחומים שעל פני השטח לא נראים קשורים אבל באמת של הדברים הם יוצרים שלם הרבה יותר עשיר, מעניין ומקצועי.
+      זה נכון שאני עושה את מה שאני אוהבת, אבל אהבה למקצוע לבדה לא מספיקה לתחושת סיפוק (בטוח שלא לאורך זמן). אני חושבת שבגן יש לי את התחושה הזו באופן כל כך ברור כי יש בו צוות ניהולי שרואה, מעריך ויודע להביע הערכה ולתגמל על העבודה שלי. יש מי שמכוון אותי כך שיש לי אפשרות לצמוח ולהשתפר בכל פעם מחדש. אחרי 3 ומשהו שנים באותו מקצוע ובאותו "תפקיד זוטר" אני עדיין מתפלאת איך הצמיחה שלי בגן היא לא רק כעובדת אלא גם כבת אדם. הצמיחה היא ממש לרוחב, דרך כל מיני תחומים שעל פני השטח לא נראים קשורים אבל באמת של הדברים הם יוצרים שלם הרבה יותר עשיר, מעניין ומקצועי.
 
-      חוצמזה, זו סביבת עבודה הכי כפיית שאפשר לבקש- יש צוות מהמם, מבנה מטופח ונעים ומלא ילדים רוקדים וצוחקים סביבי. בסה"כ זכיתי בלוטו של העבודות 
+      חוצמזה, זו סביבת עבודה הכי כיפית שאפשר לבקש - יש צוות מהמם, מבנה מטופח ונעים ומלא ילדים רוקדים וצוחקים סביבי. בסה"כ זכיתי בלוטו של העבודות.
   - title: " נופר"
     firstName: נופר
     lastName: " "
