Update לעבוד בגן ילדי הטבע “לעבוד-בגן-ילדי-הטבע”

--- a/content/work-in-gan/לעבוד-בגן-ילדי-הטבע.md
+++ b/content/work-in-gan/לעבוד-בגן-ילדי-הטבע.md
@@ -83,10 +83,10 @@ teamList:
       ותהליך הקבלה והקליטה לכאן, אם היו שואלים אותי, אז אני חושבת שהדרך של גן
       ילדי הטבע הדמוקרטי צריכה להילמד בכל הגנים בארץ ואף אפריז ואגיד שבחלומי היא
       מתרחבת גם לגילאים גדולים יותר. הבדיקה של מידת ההתאמה של המחנכת לארגון
-      והכבוד שניתן לצרכים שלה, לצד הסטנדרט הגבוהה, נותן מענה שלדעתי מערכת החינוך
+      והכבוד שניתן לצרכים שלה, לצד הסטנדרט הגבוה, נותן מענה שלדעתי מערכת החינוך
       כיום אינה מעניקה ברובה. 
        
-      אני נהנת מעבודת צוות אמיתית, עם דיבור בזמן אמת של ההנהלה שהיא חלק אינטגרלי מעשיית הצוות ממקום קשוב, מעצים ומכיל וממקום אמיתי של למידה והתפתחות. הערכים עליהם מתקיים הגן עבור הילדימות אלה אותם ערכים שמיושמים הלכה למעשה גם עבור כל מחנכת, או כול עובד/ת בגן. העבודה זורמת והרמונית ויש ניסיון אמיתי לתת לכלל הצוות תחושת שייכות וגרום לנו להרגיש חלק מקבוצת איכות של מחנכות. זו מסגרת מובנית עם שיטה ודרך, אבל כזו שנותנת גם מקום ליצירתיות והתבוננות על מה אנחנו צריכים לעשות כדי להמשיך ולהשתפר תמיד. 
+      אני נהנת מעבודת צוות אמיתית, עם דיבור בזמן אמת של ההנהלה שהיא חלק אינטגרלי מעשיית הצוות ממקום קשוב, מעצים ומכיל וממקום אמיתי של למידה והתפתחות. הערכים עליהם מתקיים הגן עבור הילדימות אלה אותם ערכים שמיושמים הלכה למעשה גם עבור כל מחנכת, או כל עובד/ת בגן. העבודה זורמת והרמונית ויש ניסיון אמיתי לתת לכלל הצוות תחושת שייכות ולגרום לנו להרגיש חלק מקבוצת איכות של מחנכות. זו מסגרת מובנית עם שיטה ודרך, אבל כזו שנותנת גם מקום ליצירתיות והתבוננות על מה אנחנו צריכים לעשות כדי להמשיך ולהשתפר תמיד. 
        
       יש הרגשה שאת לא לבד, שיש לך ביטחון תעסוקתי והתפתחותי, שאת חלק ממערכת שרואה אותך ושהעשייה שלך חשובה לה. זאת עבודה לא קלה, אבל עם תחושת שליחות וסיפוק ממלאכת חינוך איכותית שמסייעת לפריחת וצמיחת הילדימות. זה מקום שמרגיש כבוד להיות חלק ממנו. 
     role: " "
@@ -115,9 +115,9 @@ teamList:
     description: >
       כשנכנסתי לעבוד בגן ילדי הטבע לא הבנתי באמת למה אני נכנסת. הצוות הניהולי
       גרם לי להבין מהר מאוד איך מתנהלים בגן הזה, מה הערכים שמובילים את המחנכות
-      וכמה הילדימות המתוקים חשובים לנו.
+      וכמה הילדימות חשובים לנו.
 
-      להגיע לעבודה בכל בוקר ולקבל חיוך מילד או ילדה מתוקים או לתת חיבוק לילד שקצת קשה לו זה דבר מאוד מעצים שנותן אנרגיה וסיבה להמשיך ולהרבות טוב. זה גן שלוקח את תחום החינוך מאוד ברצינות. במהלך השנה יש ישיבות צוות, סמינר והשתלמויות שמרחיבות את האופקים שלנו והכל בשביל שנהיה הכי מקצועיות וטובות.והכי חשוב- שכל אחת ואחת בצוות תעזור כשצריך, תהיה שם שקצת קשה לך או שאת חולה ולא יכולה להגיע.
+      להגיע לעבודה בכל בוקר ולקבל חיוך מילד או ילדה מתוקים או לתת חיבוק לילד שקצת קשה לו זה דבר מאוד מעצים שנותן אנרגיה וסיבה להמשיך ולהרבות טוב. זה גן שלוקח את תחום החינוך מאוד ברצינות. במהלך השנה יש ישיבות צוות, סמינר והשתלמויות שמרחיבות את האופקים שלנו והכל בשביל שנהיה הכי מקצועיות וטובות. והכי חשוב- שכל אחת ואחת בצוות תעזור כשצריך, תהיה שם שקצת קשה לך או שאת חולה ולא יכולה להגיע.
   - title: תמר
     firstName: תמר
     lastName: "  "
