fixing blog issues

--- a/content/weekly-update/משתבללים-לחורף.md
+++ b/content/weekly-update/משתבללים-לחורף.md
@@ -2,24 +2,23 @@
 title: משתבללים לחורף
 date: 2021-11-18T19:49:09.132Z
 ---
+
 <!--StartFragment-->
-
-
 
 **שבת שלום!**
 
 כמה הודעות ממש חשובות:
 
-1. **שימו לב**: ביום ראשון 5.12 הגן בחופש חנוכה. 
+1. **שימו לב**: ביום ראשון 5.12 הגן בחופש חנוכה.
 2. **מסיבות חנוכה**: חנוכה מגיעה, ועימה המסיבות הראשונות של הגן יחד אתכם השנה!
 
 מייל עם כל הפרטים יישלח בשבוע הקרוב, רק מזכירות בינתיים את תאריכי המסיבות:
 
-**המסיבה של שכבת הבוגרים** תתקיים ביום שני ה-29.11.21 בשעה 17:30-18:30 בגן. 
+**המסיבה של שכבת הבוגרים** תתקיים ביום שני ה-29.11.21 בשעה 17:30-18:30 בגן.
 
-**המסיבה של שכבת הצעירים**\*\** תתקיים ביום שלישי ה-30.11.21 בשעה 17:00-18:00 בגן.
+**המסיבה של שכבת הצעירים**\*\*\* תתקיים ביום שלישי ה-30.11.21 בשעה 17:00-18:00 בגן.
 
-\*\** שימו לב - ביום זה נבקש לאסוף את ילדי וילדות שכבת הצעירים עד השעה 16:00, כדי שגם אנחנו וגם הילדימות נספיק להתארגן. 
+\*\*\* שימו לב - ביום זה נבקש לאסוף את ילדי וילדות שכבת הצעירים עד השעה 16:00, כדי שגם אנחנו וגם הילדימות נספיק להתארגן.
 
 3. **הרצאה על פרידה מחיתולים**: ההרצאה הכי מבוקשת שלנו קרבה. היא תתקיים ביום שני 22.11.21 בשעה 20:00 בזום. במפגש נדבר על כלללללל תהליך הפרידה מהשלבים הראשוניים ועד לתחתונים עצמם. נשלח אליכם מייל עם קישור לרישום.
 4. **רישום לשנת תשפ״ג**: אמנם רק סיימנו את ההסתגלויות לא מזמן, אבל תקופת הרישום לגנים מתחילה ממש עכשיו. כמו בכל שנה, אנחנו נותנים קדימות לילדימות שכבר נמצאים בגן להירשם לשנה נוספת ולכן פותחים את הרישום הפנימי ונותנים לכם קדימות של שבועיים. ישלח אליכם מייל בשבוע הקרוב עם כל הפרטים.
@@ -27,11 +26,11 @@ date: 2021-11-18T19:49:09.132Z
 
 כחלק מהאג׳נדה החינוכית שלנו אנחנו משתדלות לעודד את הילדימות לעשות את מירב הפעולות שנוגעות בהם ובגופן בעצמם. זוכרים שדיברנו בהרצאה על פירוק פעולות ועל אסתטיקה ונגישות? כאן אנחנו זקוקות לעזרה שלכם. הגן בנוי בצורה כזו שהדברים נגישים מאוד לילדימות ובכך אנחנו מאפשרים להם חוויות הצלחה. בחיים החיצוניים, מן הסתם, רוב הדברים אינם נגישים לילדימות והדבר עלול לייצר תסכול. גם היום, יש עדיין מוצרים שנמכרים לשימוש ילדימות אבל הם אינם נגישים, למשל: בקבוקי מים ונעליים מסויימות. ילדימות שהחפצים האלו אינם נגישים עבורם, עלולים לחוות תסכול, במיוחד כשהם רואים אחרים מצליחים בעודם מתקשים - ולעתים הכל עניין של גרב או נעל לא נוחה.
 
-שמנו לב שלפעמים מנקודת המבט שלכם קשה לנבא מה נגיש יותר ומה פחות אז אנחנו רוצות לתת לכם כמה נקודות לשים לב אליהן בבחירת חפצים אלה לילדימות: 
+שמנו לב שלפעמים מנקודת המבט שלכם קשה לנבא מה נגיש יותר ומה פחות אז אנחנו רוצות לתת לכם כמה נקודות לשים לב אליהן בבחירת חפצים אלה לילדימות:
 
 **בקבוקי מים**
 
-נרצה להתרחק מבקבוקים שקשה לפתוח בגלל כוח רב או סיבוב הרמטי כמו תרמוס. מה כן כדאי? מנגוגנים פשוטים כאלה שהילדים יכולים לפתוח עצמאית. לא בטוחים? תנו להם לנסות בחנות! 
+נרצה להתרחק מבקבוקים שקשה לפתוח בגלל כוח רב או סיבוב הרמטי כמו תרמוס. מה כן כדאי? מנגוגנים פשוטים כאלה שהילדים יכולים לפתוח עצמאית. לא בטוחים? תנו להם לנסות בחנות!
 
 דוגמאות לבקבוקים עם פתיחה נגישה: בקבוקים פשוטים שמותאמים לילדים עם מנגנון פתיחה נוח. קונטיגו/וקאמלבק הם דוגמאות מצויינות.
 
@@ -51,9 +50,9 @@ date: 2021-11-18T19:49:09.132Z
 
 כבר בשכבת הצעירים, בהדרגה הילדימות מתחילים לתפעל את התיק שלהם - להביא אותו, לפתוח, להוציא לבד חיתול, מכנס להחלפה… לכן נשתדל שגם התיקים יהיו קלים לתפעול. לא כבדים או עמוסים מדי, כדי שיוכלו לשאת אותם לבדם, ומאורגנים בצורה נוחה וזמינה להם. לוודא שיש שק כביסה כדי ליצור מקום קבוע לכל דבר. בגדים וחיתולים מסודרים זה לצד זה כדי שלא יהיה צורך להפוך את כל התיק בשביל זוג מכנסיים.
 
- וכמובן, אם יש לכם תהיה או התלבטות לגבי נוחיות של נעליים/תיק/מכנסיים - מוזמנות לשאול את הילדימות וגם אותנו!
+וכמובן, אם יש לכם תהיה או התלבטות לגבי נוחיות של נעליים/תיק/מכנסיים - מוזמנות לשאול את הילדימות וגם אותנו!
 
- **שבת של מנוחה ועצמאות!**
+**שבת של מנוחה ועצמאות!**
 
 **צוות ילדי הטבע הדמוקרטי**
 
@@ -61,7 +60,7 @@ date: 2021-11-18T19:49:09.132Z
 
 השבוע התחלנו להתכונן. למה? לחנוכה הקרב ובא, וכמובן לחורף שלא ממש ממהר להגיע השנה, אבל מתחילים לזהות את ההתחלה שלו אחרי הצהריים כשאנחנו יוצאים מהגן וקריר, ובטפטופים פה ושם. הטפטופים הוציאו לרחובות חברים חורפיים אהובים - חלזונות וחשופיות! המשכנו בהיכרות שלנו עם הרכיכות הנפוצות, וכמובן לא שכחנו את חברי הסתיו - הציפורים והנחליאלי שלנו.
 
-את השבוע שלנו ליווה שיר אהוב במיוחד - "חילזון פוגש חבר" של אראלה בורשטיין. בשבוע שעבר כבר התחלנו לדבר על התנועה שלנו במרחב, והשבוע המשכנו בכך, וגם יישמנו זאת בעזרת השיר. ניסינו להשתבלל כו שבלול, ולהיות הכי עגולים וקטנים שיש. כמו מר שבלול, הוצאנו מחוש, ועוד מחוש, ניערנו קצת את הראש, ויצאנו לטייל בנחת. [](https://youtu.be/VRf9RZa-HRI) [השיר ](<https://youtu.be/VRf9RZa-HRI>)בנוי ממקצבים איטיים שבהם החילזון זוחל לאיטו, עד שהוא פוגש את חברו הנחליאלי שרץ מהר (וגם הארנב, חיה פופולרית במיוחד בשכבתנו). במקצבים האיטיים החברים שוכבים על הבטן וזוחלים בעזרת הידיים, במקצבים המהירים החברים רצים רצים רצים עם הנחליאלי. ממליצות בחום להפעיל את השיר בבית ולראות את הילדימות בפעולה :).
+את השבוע שלנו ליווה שיר אהוב במיוחד - "חילזון פוגש חבר" של אראלה בורשטיין. בשבוע שעבר כבר התחלנו לדבר על התנועה שלנו במרחב, והשבוע המשכנו בכך, וגם יישמנו זאת בעזרת השיר. ניסינו להשתבלל כו שבלול, ולהיות הכי עגולים וקטנים שיש. כמו מר שבלול, הוצאנו מחוש, ועוד מחוש, ניערנו קצת את הראש, ויצאנו לטייל בנחת. [](https://youtu.be/VRf9RZa-HRI) [השיר ](https://youtu.be/VRf9RZa-HRI)בנוי ממקצבים איטיים שבהם החילזון זוחל לאיטו, עד שהוא פוגש את חברו הנחליאלי שרץ מהר (וגם הארנב, חיה פופולרית במיוחד בשכבתנו). במקצבים האיטיים החברים שוכבים על הבטן וזוחלים בעזרת הידיים, במקצבים המהירים החברים רצים רצים רצים עם הנחליאלי. ממליצות בחום להפעיל את השיר בבית ולראות את הילדימות בפעולה :).
 
 איך עוד אנחנו עובדים על מקצבים? בתיפוף! גם בתיפוף על הגוף, וגם על הרצפה או על ה"תופים" שלנו - מיכלי ענק שהכילו פעם טחינה והיום הם משמשים לנו לה-מון פעילויות, ביניהן תופים. אנחנו מכות על "[התוף הגדול](https://nogageva.bandcamp.com/track/--5)" שלנו לפעמים חזק, לפעמים חלש, לפעמים מהר ולפעמים לאט.
 
@@ -85,15 +84,13 @@ date: 2021-11-18T19:49:09.132Z
 
 **צוות שכבת הצעירים: חולוד, חוה, רותם, שיר, מיכל, עדי, בר**
 
-  
-
 ## שכבת הבוגרים
 
-השבוע גילינו שאמנם הסתיו הפכפך, אבל לשבלול ולנמלה הסתיו הוא עונה משמעותית. הסתיו מסמן לנו שהחורף מתקרב - הקור וטיפות הגשם מאותתים לשבלול שהוא יכול לצאת מהקונכייה שלו לטייל בנחת, והנמלה החרוצה מבינה שעליה לאגור מזון לחורף במהרה. וכך יצאנו לחקור לעומק את השבלול והנמלה. 
+השבוע גילינו שאמנם הסתיו הפכפך, אבל לשבלול ולנמלה הסתיו הוא עונה משמעותית. הסתיו מסמן לנו שהחורף מתקרב - הקור וטיפות הגשם מאותתים לשבלול שהוא יכול לצאת מהקונכייה שלו לטייל בנחת, והנמלה החרוצה מבינה שעליה לאגור מזון לחורף במהרה. וכך יצאנו לחקור לעומק את השבלול והנמלה.
 
-שוחחנו על הקונכייה של השבלול - היא קשה לעומת גופו הרך והרירי. תהינו מה תפקידה? מדוע הוא סוחב אותה לכל מקום? בית שמגן עליו, שריון מפני טורפים. שאלנו האם הקונכייה קשה יותר מקוביות העץ שיש לנו בחצר? מה יקרה אם אני אדרוך במקרה על קוביית עץ? האם היא תישבר? מה יקרה אם בטעות אדרוך על הקונכייה של השבלול?  האם הבצק רך כמו גופו של השבלול? אספנו את כל השאלות וכך למדנו הפכים מעניינים כמו רך מול קשה, עדין ושביר מול גס וחסון. הבנו שכאשר אני רואה שבלול בצד הדרך או בגינה, אני צריכה לפעול בעדינות ורכות כדי לא לפגוע בו. 
+שוחחנו על הקונכייה של השבלול - היא קשה לעומת גופו הרך והרירי. תהינו מה תפקידה? מדוע הוא סוחב אותה לכל מקום? בית שמגן עליו, שריון מפני טורפים. שאלנו האם הקונכייה קשה יותר מקוביות העץ שיש לנו בחצר? מה יקרה אם אני אדרוך במקרה על קוביית עץ? האם היא תישבר? מה יקרה אם בטעות אדרוך על הקונכייה של השבלול?  האם הבצק רך כמו גופו של השבלול? אספנו את כל השאלות וכך למדנו הפכים מעניינים כמו רך מול קשה, עדין ושביר מול גס וחסון. הבנו שכאשר אני רואה שבלול בצד הדרך או בגינה, אני צריכה לפעול בעדינות ורכות כדי לא לפגוע בו.
 
-בהמשך השבוע העמקנו בנמלה החרוצה - גם כאן דיברנו על הפכים כמו: גדול מול קטן, מהר מול לאט, חרוץ מול עצלן. תחילה בדקנו אילו צבעים יש לנמלים? שחור, חום ואפילו אדום. כמה רגליים יש להן? לאן הנמלה סוחבת את האוכל שהיא מוצאת? שמנו לב שגם לה, בדומה לשבלול, יש מחושים על ראשה. למדנו  שהבית שלהן נקרא מושבה, הוא ממוקם מתחת לאדמה והנמלים החרוצות חופרות יחד מחילות קטנות. עוד גילינו שהנמלה הולכת בשיירה, ואמנם היא יצור קטן אבל היא מאוד מהירה והיא מסוגלת לסחוב משקל רב על גבה. כך היא מצליחה לאסוף מזון רב שישמש אותה בימי החורף הגשומים. בכיתה תירגלנו כיצד הולכים בשיירה, גילינו שצריך ממש להתרכז ולשים לב למי שנמצאותים לפניך - מתי הקצב שלו/ה כבר, מתי הואט, מתי נעצרו, פנו ועוד.  
+בהמשך השבוע העמקנו בנמלה החרוצה - גם כאן דיברנו על הפכים כמו: גדול מול קטן, מהר מול לאט, חרוץ מול עצלן. תחילה בדקנו אילו צבעים יש לנמלים? שחור, חום ואפילו אדום. כמה רגליים יש להן? לאן הנמלה סוחבת את האוכל שהיא מוצאת? שמנו לב שגם לה, בדומה לשבלול, יש מחושים על ראשה. למדנו  שהבית שלהן נקרא מושבה, הוא ממוקם מתחת לאדמה והנמלים החרוצות חופרות יחד מחילות קטנות. עוד גילינו שהנמלה הולכת בשיירה, ואמנם היא יצור קטן אבל היא מאוד מהירה והיא מסוגלת לסחוב משקל רב על גבה. כך היא מצליחה לאסוף מזון רב שישמש אותה בימי החורף הגשומים. בכיתה תירגלנו כיצד הולכים בשיירה, גילינו שצריך ממש להתרכז ולשים לב למי שנמצאותים לפניך - מתי הקצב שלו/ה כבר, מתי הואט, מתי נעצרו, פנו ועוד.
 
 תוך כדי עבודה וחקירה בחומרי אומנות שונים כמו פחם, החתמת עלים וציורי ידיים בקצף גילוח וצבעי ידיים - הצפנו שאלות שמטרתן לגרום לנו לשים לב כמה כח אנחנו מפעילים בגופנו. מתי אנחנו תופסים בעדינות ומתי אנחנו נאחזים בחוזקה? למשל כשאנחנו מטפסים בחצר, אנחנו צריכים להחזיק במשהו יציב בחוזקה כדי לא ליפול. אבל כשאני נותנת יד או חיבוק לחברימה אני עושה זאת בעדינות כדי לא למעוך ולהכאיב. בנוסף גילינו שלפעמים משהו יכול להיראות לנו קשיח, אבל למעשה הוא רך וגמיש. לדוגמה, בפעילות החתמת עלים, ראינו שהעלה יכול בקלות להישבר לנו בידיים במידה ונאחוז בו בחוזקה. הבנו שבמידה ואנו רוצים להרים את העלה מהדף, עלינו לעשות זאת בעדינות ובאיטיות כדי לשמור עליו שלם. בציור פחם ראינו על הדף את ההבדל בין הקווים בהם הפעלנו כח רב עם הפחם, לבין הקווים בהם הפעלנו מעט כח.
 
