Update עדכון שבועי “הגשם-הגשם-נפל-על-אפי”

--- a/content/weekly-update/הגשם-הגשם-נפל-על-אפי.md
+++ b/content/weekly-update/הגשם-הגשם-נפל-על-אפי.md
@@ -44,7 +44,7 @@ date: 2021-12-09T20:20:19.305Z
 
 עם הגשם הגיע עוד חבר טוב שלנו, החילזון. החילזון הוא חיה מרתקת שמלווה אותנו כל החורף, ויש המון מה ללמוד ממנה ועליה! בשבועות האחרונים, לקראת החורף ולקראת תחילת חגיגות יום ההולדת, קראנו בספר "ברלה, ברלה צא החוצה". חיפשנו יחד עם בר'לה את החברימות שלו ושמחנו כשכולם הפתיעו אותו ליום ההולדת הכי טוב שלו אי פעם!
 
-לשיר "[חילזון פוגש כבר](https://www.youtube.com/watch?v=VRf9RZa-HRI)" שאנחנו מתרגלים כבר כמה שבועות, הוספנו את "[טוק טוק טוק, צא חילזון](https://www.youtube.com/watch?v=lUDJ9FzyyP4)", שגם הוא בעל מהירויות משתנות, ובו אנחנו מעודדים את החילזון לצאת מהקונכייה, אך הוא מסרב, עד שלבסוף מגיע הגשם ומושך אותו החוצה!
+לשיר "[חילזון פוגש חבר](https://www.youtube.com/watch?v=VRf9RZa-HRI)" שאנחנו מתרגלים כבר כמה שבועות, הוספנו את "[טוק טוק טוק, צא חילזון](https://www.youtube.com/watch?v=lUDJ9FzyyP4)", שגם הוא בעל מהירויות משתנות, ובו אנחנו מעודדים את החילזון לצאת מהקונכייה, אך הוא מסרב, עד שלבסוף מגיע הגשם ומושך אותו החוצה!
 
 בשבוע הבא נמשיך להעמיק בנושא החורף, ונקווה לימי חורף שמושים ונעימים!
 
