Update עדכון שבועי “משחקים-ולומדים-עם-הגשם-השוטף-של-כרמל”

--- a/content/weekly-update/משחקים-ולומדים-עם-הגשם-השוטף-של-כרמל.md
+++ b/content/weekly-update/משחקים-ולומדים-עם-הגשם-השוטף-של-כרמל.md
@@ -28,7 +28,7 @@ date: 2021-12-24T12:38:47.458Z
 4. במידה ומישהו מבני המשפחה שגרים בבית בבידוד, חלה גם על הילד/ה שבן חובת בידוד אלא אם כן האח/ ההורה בבידוד משאר בני המשפחה (כלומר לא בבית).
 5. מבקשים להזכיר שוב כי אנחנו לא מאפשרים כניסת אחים גם לא לאזור הסטרילי. לאזור הסריטלי יכול/ה להכנס אך ורק אדם אחד לאיסוף כל ילד/ה ורק עם מסכה על אף ופה.
 
-* **סמינר צוות**: מזכירה שוב שב-13.1.22, יום חמישי, הגן לא פועל - הצוות בסמינר מחוץ לגן (מעודכן בלוח השנה של הגן ).
+* **סמינר צוות**: מזכירה שוב שב-13.1.22, יום חמישי, הגן לא פועל - הצוות בסמינר מחוץ לגן (מעודכן [בלוח השנה של הגן ](https://ganyeledteva.co.il/)).
 
 **שבת של מנוחה !**
 
@@ -101,8 +101,6 @@ date: 2021-12-24T12:38:47.458Z
 מאחלות לכם סוף שבוע מלא בכרבולים!
 
 **צוות שכבת הצעירים: חוה, חולוד, עדי, מיכל, רותם, שיר ובר** 
-
-
 
 ## שכבת הבוגרים
 
