--- a/content/team/שגיא.md
+++ b/content/team/שגיא.md
@@ -1,28 +1,23 @@
 ---
-title: "שגיא "
-firstname: "שגיא "
-lastname: "בן יאיר "
+title: 'שגיא '
+firstname: 'שגיא '
+lastname: 'בן יאיר '
 img: /assets/pics/uploads/גן_ילדי_הטבע_הדמוקרטי_צוות_צעירים_-_צילום_לנס_הפקות_68.jpg
 index: 3
 ---
 
-
 **שגיא בן יאיר, בת 29.**
 
- **בוגרת תואר ראשון בחינוך לגיל הרך, המסלול היצירתי בסמינר הקיבוצים- שנתיים בגן**
+**בוגרת תואר ראשון בחינוך לגיל הרך, המסלול היצירתי בסמינר הקיבוצים- שנתיים בגן**
 
- <br>
+<br />
 
 הגעתי לתחום החינוך מתוך אהבה גדולה לילדימות ואמונה גדולה בחינוך. יש בי רצון להשפיע על דור העתיד ולהנחיל ערכים בהם אני מאמינה כמו עצמאות, הגשמה עצמית, קבלת האחר, איכות הסביבה וכדומה.
 
- 
-
 מגיל צעיר אהבתי ליצור מחומרים שונים (גם חומרי אומנות וגם סתם חפצים שכבר אין בהם שימוש כמו פקקים, קופסאות, כפתורים, חרוזים ועוד) ואת האהבה הזאת חשוב לי לתרגם ולהעניק לילדימות בצורת התנסות שמזמנת למידה רבה בהקשרים קוגניטיביים ומוטוריים. באופן כללי חשוב לי ליצור מרחב בטוח עבור הילדימות בו יוכלו לחקור על עצמם ועל העולם. מרחב שמאפשר דיאלוג פתוח למגוון דעות, רגשות, תחושות, העדפות ועוד. בדרך זו אני מאמינה שכל אחד ואחת יוכלו לממש את הפוטנציאל הטמון בהם.
 
- 
+אני רואה את החיים כמסע של למידה והתפתחות אישית, כמו הילדימות גם אני מגלה בכל יום דברים חדשים על עצמי ועל העולם. אני מרגישה שהגן הוא המקום המושלם עבורי ושואפת שכך יהיה גם עבור הילדימות - מרחב שמאפשר יצירה, חקירה, תנועה, מוזיקה ואינסוף אפשרויות להתפתחות אישית.
 
-אני רואה את החיים כמסע של למידה והתפתחות אישית, כמו הילדימות גם אני מגלה בכל יום דברים חדשים על עצמי ועל העולם. אני מרגישה שהגן הוא המקום המושלם עבורי ושואפת שכך יהיה גם עבור הילדימות - מרחב שמאפשר יצירה, חקירה, תנועה, מוזיקה ואינסוף אפשרויות להתפתחות אישית. 
-
-  <br>
+<br />
 
 המפגש הראשוני שלי עם תפיסת החינוך של הגן הייתה בהרצאה של אחינועם שהתקיימה בסמינר, הוקסמתי מעולם התוכן החינוכי והיחס לילדימות ואני שמחה על ההזדמנות להיות חלק מהמשפחה.
