Update עדכון שבועי “שבוע-של-אשוחים-ומשחקים”

--- a/content/weekly-update/שבוע-של-אשוחים-ומשחקים.md
+++ b/content/weekly-update/שבוע-של-אשוחים-ומשחקים.md
@@ -14,13 +14,9 @@ date: 2022-01-07T13:34:19.945Z
 
 4. **שיחות אישיות**: בחודש פברואר הקרוב יתקיימו שיחות אישיות איתכם ההורים. מטרת השיחות היא לתת לכם הצצה לתמונה שמשתקפת לנו בגן בכל יום על ילד/תכם, איך היא/וא מתפקדים בכל שלב ביום ואיך אנחנו רואות אותם. פירוט שעות ומבנה הפגישה ישלחו בשבוע הבא. 
 
- 
-
 **שבת של מנוחה !**
 
 **צוות גן ילדי הטבע הדמוקרטי**
-
- 
 
 ## שכבת הצעירים
 
@@ -36,7 +32,7 @@ date: 2022-01-07T13:34:19.945Z
 
 **ומה החיה החביבה על כולם כרגע בשכבת הצעירים?**
 
-החילזון! הילדימות אוהבים מאוד להשתבלל כמו חלזונות - לזחול בנחת ולפגוש חברים זריזים. הם אוהבים להתכדרר ולחכות שמחנכת תעיר אותם! אבל כל עוד אין גשם - "לא רוצה" - הילדימות מנענעים לשלילה ומתרגלים את צמד המלים שמאפשרות לנו להביע את הרצונות שלנו בצורה ברורה! ולא רק בשירים וריקודים אנחנו אוהבים שבלולים: גם בבצק, וגם בסיפור - קראנו שוב את "ברל'ה, צא החוצה, שהחברים מבקשים שוב ושוב, וכבר יודעים בעל פה! גם בחצר הם חוגגים לברל'ה עוגות יום הולדת ושרים לו בקולי קולות: "ברל'ה, ברל'ה, צא החוצה, אמא ואבא יביאו לך עוגה!
+החילזון! הילדימות אוהבים מאוד להשתבלל כמו חלזונות - [לזחול בנחת](https://www.youtube.com/watch?v=VRf9RZa-HRI) ולפגוש חברים זריזים. הם אוהבים להתכדרר ולחכות שמחנכת תעיר אותם! [אבל כל עוד אין גשם](https://www.youtube.com/watch?v=lUDJ9FzyyP4) - "לא רוצה" - הילדימות מנענעים לשלילה ומתרגלים את צמד המלים שמאפשרות לנו להביע את הרצונות שלנו בצורה ברורה! ולא רק בשירים וריקודים אנחנו אוהבים שבלולים: גם בבצק, וגם בסיפור - קראנו שוב את "ברל'ה, צא החוצה" שהחברים מבקשים שוב ושוב, וכבר יודעים בעל פה! גם בחצר הם חוגגים לברל'ה עוגות יום הולדת ושרים לו בקולי קולות: "ברל'ה, ברל'ה, צא החוצה, אמא ואבא יביאו לך עוגה!
 
 בשולחן הציור חברימות רבים מציירים כבר עיגולים, מצביעים, ואומרים: שבלול! ראינו את הדמיון בין השבלול לעיגול, וניסינו גם אנחנו לשבת במעגל. בחצר אנחנו כבר רגילים לשבת בעיגול על הג'ימבורי שעל הדק. התחלנו גם בכיתה לנסות לשבת במעגלים: מסביב לשטיח העגול, או פשוט בעיגול שסימנו לנו. הישיבה במעגל נעימה לנו? כן! כך אנחנו יכולים לראות את כו-לם! אנחנו יושבים קרובים ויכולים לדבר, להעביר חפצים זה לזה, וזה מאוד כיף!
 
@@ -47,8 +43,6 @@ date: 2022-01-07T13:34:19.945Z
 **נתראה ביום ראשון!**
 
 **צוות שכבת הצעירים: חוה, חולוד, עדי, בר, שיר, רותם ומיכל**
-
-
 
 ## שכבת הבוגרים
 
