Update עדכון שבועי “שי-מן-הפרדס”

--- a/content/weekly-update/שי-מן-הפרדס.md
+++ b/content/weekly-update/שי-מן-הפרדס.md
@@ -4,8 +4,6 @@ date: 2022-01-13T17:51:29.155Z
 ---
 היי הורימות, 
 
- 
-
 1. **אירועים קרובים**: מזכירות שני אירועים שיתקיימו בקרוב ואנחנו מאוד ממליצות להשתתף בהם: 
 
 * 18.1.22 בשעה 20:00 בזום - פורום הורים בנושא ״פליי דייטס״ שנדחה מהשבוע שעבר.
@@ -21,13 +19,11 @@ date: 2022-01-13T17:51:29.155Z
 
 הקשר שלכם מעבר לדיווחי סוף יומיומיים הוא מול הקפטניות בלבד. אנחנו שומרים על הגדרות ברורות כדי לשמור על רצף חינוכי, על תהליכים מסודרים של הילדימות ועל החיים הפרטיים של הצוות. נבקש שלא ליצור קשר עם מחנכות אחרות בטלפון / במיילים. 
 
-במידה והקפטנית שלכם לא נמצאת / לא עונה, תמיד תוכלו לפנות לקפטנית המקבילה בשכבה - אורטל וגבי בבוגרים, מיכל וחוה בצעירים.\
-\
+במידה והקפטנית שלכם לא נמצאת / לא עונה, תמיד תוכלו לפנות לקפטנית המקבילה בשכבה - אורטל וגבי בבוגרים, מיכל וחוה בצעירים.
+
 **שבת של מנוחה !**
 
 **צוות גן ילדי הטבע הדמוקרטי**
-
- 
 
 ## שכבת הצעירים
 
@@ -56,8 +52,6 @@ date: 2022-01-13T17:51:29.155Z
 **נתראה ביום ראשון!**
 
 **צוות שכבת הצעירים: חוה, חולוד, עדי, בר, שיר, רותם ומיכל**
-
-
 
 ## שכבת הבוגרים
 
