Update עדכון שבועי “שי-מן-הפרדס”

--- a/content/weekly-update/שי-מן-הפרדס.md
+++ b/content/weekly-update/שי-מן-הפרדס.md
@@ -74,5 +74,6 @@ date: 2022-01-13T17:51:29.155Z
 
  בשבוע הבא נכיר את טו-בשבט :) מחכות לשבוע חדש אתכם, עם בקבוקים מלאים וסדינים רעננים!
 
-**מאחלות לכם סופשבוע מלא בהפתעות,**\
+**מאחלות לכם סופשבוע מלא בהפתעות,**
+
 **מכל צוות שכבת הבוגרים: אורטל, גבי, נופר, הילה, רוני, תמר ושגיא**
