Update עדכון שבועי “טו-בשבט-הגיע-לגן”

--- a/content/weekly-update/טו-בשבט-הגיע-לגן.md
+++ b/content/weekly-update/טו-בשבט-הגיע-לגן.md
@@ -10,8 +10,6 @@ date: 2022-01-20T17:20:20.809Z
 
 **צוות גן ילדי הטבע הדמוקרטי**
 
- 
-
 ## שכבת הצעירים
 
 שבוע מאוד מבולבל עבר על שכבת הצעירים: התחלנו את השבוע כמעט כולנו יחד, ביום גשום במיוחד, והמשכנו עם יומיים ממש קרים! מה עושים?! מיד נגלה, אבל קודם, כמה הודעות:
@@ -40,7 +38,7 @@ date: 2022-01-20T17:20:20.809Z
 
 השבוע התחלנו לציין את טו בשבט – בשבוע שעבר כבר בעצם התחלנו להתכונן, כשדיברנו על עצי ההדר, אבל השבוע התחלנו להעמיק את שיח העצים שלנו. ממה מורכב העץ? למדנו דיקלום חדש מלוות בתנועות ידיים תואמות:
 
-> "שורשים באדמה,
+> שורשים באדמה,
 >
 > גזע אדיר קומה,
 >
@@ -48,13 +46,11 @@ date: 2022-01-20T17:20:20.809Z
 >
 > פירות טעימים ופרחים מקסימים".
 
-התחלנו להכיר גם שירים לכבוד החג: "[יש לי בחצר כזה חבר / עץ ירוק קטן מתוק](https://www.youtube.com/watch?v=CbW58ratUQo&feature=youtu.be)" וכמובן "[טו בשבט הגיע](<https://www.youtube.com/watch?v=IErHuCvUZUE>)".
+התחלנו להכיר גם שירים לכבוד החג: "[יש לי בחצר כזה חבר / עץ ירוק קטן מתוק](https://www.youtube.com/watch?v=CbW58ratUQo&feature=youtu.be)" וכמובן "[טו בשבט הגיע](https://www.youtube.com/watch?v=IErHuCvUZUE)".
 
 בינתיים מאחלות לכם סופ"ש נינוח בבית – לתמונות השבוע צירפנו גם פינוק הפעלה לסופ"ש – כרטיסיות תנועה. מה עושים איתן? מדפיסים, גוזרים, מערבבים ומפזרים. בוחרים כל פעם כרטיסיה אחת ומנסים לבצע את הפעולה שמצויינת עליה. זוהי פעילות מצויינת שהיא גם מהנה וגם מוציאת אנרגיות! אפשר לעשות את הכרטיסיות בזו אחר זו, או להחליט שבכל מעבר למשל מבצעים אחת. תבלו!
 
 **צוות שכבת הצעירים: חוה, מיכל, שיר, בר, עדי, רותם וחולד**
-
-                                                             
 
 ## שכבת הבוגרים
 
@@ -64,15 +60,15 @@ date: 2022-01-20T17:20:20.809Z
 
 בכיתה הצהובה חיכה לנו קרטון גדול, עם ציור של עץ. צבענו אותו וקישטנו אותו במדבקות, ודיברנו על חלקי העץ:
 
-> "שורשים באדמה,
+> שורשים באדמה,
 >
-> > גזע אדיר קומה,
-> >
-> > יש ענפים וגם עלים,
-> >
-> > פירות טעימים
-> >
-> > ופרחים מקסימים."
+> גזע אדיר קומה,
+>
+> יש ענפים וגם עלים,
+>
+> פירות טעימים
+>
+> ופרחים מקסימים."
 
 הילדימות אמרו שהם רוצים להכין עוגת טו בשבט. מה זו עוגת טו בשבט? שאלנו אותן. מה יש בה? תמרים! ענו הילדימות, כשחשבו על "6 בשקיק".
 
