Update עדכון שבועי “טו-בשבט-הגיע-לגן”

--- a/content/weekly-update/טו-בשבט-הגיע-לגן.md
+++ b/content/weekly-update/טו-בשבט-הגיע-לגן.md
@@ -72,7 +72,7 @@ date: 2022-01-20T17:20:20.809Z
 
 הילדימות אמרו שהם רוצים להכין עוגת טו בשבט. מה זו עוגת טו בשבט? שאלנו אותן. מה יש בה? תמרים! ענו הילדימות, כשחשבו על "6 בשקיק".
 
-ביום אחר, יצאנו לחצר, התבוננו בעץ הלימון שבקיץ מצל עלינו בארגז הלימון, וראינו שהוא שפוף ועייף. הוא עבד ממש קשה בשבועות האחרונים וייצר לנו לימונים גדולים, צהובים, ריחניים ועסיסיים! עכשיו, הלימונים כל כך גדולים וכבדים עד שהענפים שלו כבר התכופפו המון. החלטנו להקל על העץ שלנו ולקטוף חלק מהלימונים. החברימות ניסו למשוך את הלימונים – הענף התכופף עוד יותר, אבל הלימונים נשארו מחוברים! אז ניסינו לסובב את הלימונים בעדינות וראינו איך הם בקלות נפרדים מהענף הגדול ונותרים בידינו. הרחנו אותם ושמנו לב שהריח שלהם חזק ונעים הרבה יותר מלימונים ששכבו זמן מה במדף. קטפנו עוד ועוד לימונים עד שמילאנו דלי שלם! הבאנו אותו למטבח, שם פגשנו בראובנה שבישלה לנו אוכל חורפי טעים ושמחה לקבל שלל לימונים טריים. בשבוע הבא שוב נחפש את הלימונים הגדולים והצהובים ביותר ונביאם למטבח.
+ביום אחר, יצאנו לחצר, התבוננו בעץ הלימון שבקיץ מצל עלינו בארגז החול, וראינו שהוא שפוף ועייף. הוא עבד ממש קשה בשבועות האחרונים וייצר לנו לימונים גדולים, צהובים, ריחניים ועסיסיים! עכשיו, הלימונים כל כך גדולים וכבדים עד שהענפים שלו כבר התכופפו המון. החלטנו להקל על העץ שלנו ולקטוף חלק מהלימונים. החברימות ניסו למשוך את הלימונים – הענף התכופף עוד יותר, אבל הלימונים נשארו מחוברים! אז ניסינו לסובב את הלימונים בעדינות וראינו איך הם בקלות נפרדים מהענף הגדול ונותרים בידינו. הרחנו אותם ושמנו לב שהריח שלהם חזק ונעים הרבה יותר מלימונים ששכבו זמן מה במדף. קטפנו עוד ועוד לימונים עד שמילאנו דלי שלם! הבאנו אותו למטבח, שם פגשנו בראובנה שבישלה לנו אוכל חורפי טעים ושמחה לקבל שלל לימונים טריים. בשבוע הבא שוב נחפש את הלימונים הגדולים והצהובים ביותר ונביאם למטבח.
 
 ![](/assets/pics/uploads/עץ-הלימון.jpeg)
 
