Update עדכון שבועי “פרצופים-וכובעים-בגן-ילדי-הטבע”

--- a/content/weekly-update/פרצופים-וכובעים-בגן-ילדי-הטבע.md
+++ b/content/weekly-update/פרצופים-וכובעים-בגן-ילדי-הטבע.md
@@ -6,9 +6,13 @@ date: 2022-02-25T13:02:49.502Z
 
 לפני שנעבור לעדכון, כמה הודעות קצרות:
 
-1. **מגבונים**: חודש חדש מתחיל ועימו נבקש מגבונים חדשים - 4 חבילות לילדימות עם חיתולים, 2 חבילות לילדימות גמולים.
-2. **קורונה**: מזכירים כי לעת עתה אתם מתבקשים לבצע בדיקות פעמיים בשבוע - מדי ראשון ורביעי. ביום ראשון יחולקו לכם ערכות בדיקה חדשות לשבועות הקרובים. ילדימות שחלו בגל האחרון, כלומר ב-60 הימים האחרונים, אינם מחוייבים בבדיקות אלה. שימו לב - אם ילדיכם עם סימפטומים כמו שיעול חדש, צינון, חום, כאב גרון - אלו תסמינים שמזוהים עם הוריאנטים האחרונים, אז בצעו בדיקה ליתר ביטחון.
-3. **פורים קרב ובא!**
+1. מזל טוב לראובנה שלנו לרגל הולדת הנכד!
+
+**2. מגבונים**: חודש חדש מתחיל ועימו נבקש מגבונים חדשים - 4 חבילות לילדימות עם חיתולים, 2 חבילות לילדימות גמולים.
+
+**3. קורונה**: מזכירים כי לעת עתה אתם מתבקשים לבצע בדיקות פעמיים בשבוע - מדי ראשון ורביעי. ביום ראשון יחולקו לכם ערכות בדיקה חדשות לשבועות הקרובים. ילדימות שחלו בגל האחרון, כלומר ב-60 הימים האחרונים, אינם מחוייבים בבדיקות אלה. שימו לב - אם ילדיכם עם סימפטומים כמו שיעול חדש, צינון, חום, כאב גרון - אלו תסמינים שמזוהים עם הוריאנטים האחרונים, אז בצעו בדיקה ליתר ביטחון.
+
+**4. פורים קרב ובא!**
 
 **שימו לב: חופש פורים יתקיים בימים חמישי ושישי ה-17-18 במרץ.**
 
