Update עדכון שבועי “מסע-למצרים-והרבה-קושיות”

--- a/content/weekly-update/מסע-למצרים-והרבה-קושיות.md
+++ b/content/weekly-update/מסע-למצרים-והרבה-קושיות.md
@@ -1,5 +1,5 @@
 ---
-title: מסע למצרים והרבה קושיות
+title: מסיבה מצרית והרבה קושיות
 date: 2022-04-14T20:17:53.129Z
 ---
 **שבת שלום לכל משפחות הגן!**
