Update עדכון שבועי “צפירות-ביום-קיץ”

--- a/content/weekly-update/צפירות-ביום-קיץ.md
+++ b/content/weekly-update/צפירות-ביום-קיץ.md
@@ -4,12 +4,12 @@ date: 2022-04-29T12:05:49.228Z
 ---
 <!--StartFragment-->
 
-שבת שלום לכל משפחות הגן!
+**שבת שלום לכל משפחות הגן!**
 
-1. יום העצמאות והזכרון:  יום רביעי, ערב יום העצמאות, הגן מסיים פעילות בשעה 11:45 (כמו שישי). ביום זה לא תוגש ארוחת צהרים. יום חמישי, יום העצמאות, הוא יום חופש (ומתחבר עם שישי חופשי).
-2. מסיבת עצמאות: ביום שלישי נחגוג בגן מסיבת עצמאות! כמיטב המסורת, נפתח בגן דוכן פלאפל (שיוכן כאן בגן ע״י ראובנה המלכה). את הדוכן יתפעלו חברי וחברות שכבת הבוגרים ויארחו את הצעירים :) מבטיחים לשלוח תמונות.  נשמח אם הילדימות יגיעו לגן לבושים בלבן - אפשר גם טאצ׳ כחול :)  
-3. פורום הורים מעבר לגן עירוני:  יתקיים ביום שני 9.5.22 בשעה 20:00 בזום, פרטים ישלחו באותו שבוע. 
-4. עדכוני צוות: 
+1. **יום העצמאות והזכרון**:  יום רביעי, ערב יום העצמאות, הגן מסיים פעילות בשעה 11:45 (כמו שישי). ביום זה לא תוגש ארוחת צהרים. יום חמישי, יום העצמאות, הוא יום חופש (ומתחבר עם שישי חופשי).
+2. **מסיבת עצמאות**: ביום שלישי נחגוג בגן מסיבת עצמאות! כמיטב המסורת, נפתח בגן דוכן פלאפל (שיוכן כאן בגן ע״י ראובנה המלכה). את הדוכן יתפעלו חברי וחברות שכבת הבוגרים ויארחו את הצעירים :) מבטיחים לשלוח תמונות.  נשמח אם הילדימות יגיעו לגן לבושים בלבן - אפשר גם טאצ׳ כחול :)  
+3. **פורום הורים מעבר לגן עירוני:**  יתקיים ביום שני 9.5.22 בשעה 20:00 בזום, פרטים ישלחו באותו שבוע. 
+4. **עדכוני צוות:** 
 
 * שגיא נמצאת בחופשה, והיא תחזור לגן ביום ראשון 8.5. 
 * שינוי קל בימים החופשיים של הקפטניות: 
@@ -22,17 +22,13 @@ date: 2022-04-29T12:05:49.228Z
 
 יום שישי - חוה 
 
-5. יתושים: הקיץ מגיע, ואיתו היתושים. אנחנו מודעים למצב המתסכל שבו הילדימות קמים עקוצים. מהצד שלנו אנחנו עורכים לקראת כל קיץ סריקה שאין מקורות מים עומדים או מקורות אחרים שמביאים יתושים לגן שלנו. יחד עם זאת, מניעה והרחקה של יתושים היא עניין שהשליטה שלנו בו מוגבלת. ממליצים לכם להשתמש בשיטות הטבעיות כמו מריחת שמנים ולשקול לרכוש צמיד מרחיק יתושים ששמים על הרגל של הילד/ה- מנסיוננו זה עוזר מאוד. 
-6. שמש: ועוד עם הקיץ, מגיעה השמש הצורבת. החצר שלנו מוצלת ב90% מהשטח שלה, ועדיין השמש בארץ חזקה וחודרת גם את הציליות. אנחנו ממליצים לכם להתחיל למרוח בכל בוקר את האזורים החשופים של הילדימות כדי לשמור על העור העדין שלהם. 
-7. מים, מים, מים: כדי להילחם בחום, אבל בעיקר כי אפשר וכי זה ממש כיף - שולחנות המים חזרו לחצרות שלנו! אז, מזכירות להשאיר בתיק בגדי החלפה מלאים ושקית רב פעמית לבגדים מלוכלכים ורטובים :) 
+5. **יתושים**: הקיץ מגיע, ואיתו היתושים. אנחנו מודעים למצב המתסכל שבו הילדימות קמים עקוצים. מהצד שלנו אנחנו עורכים לקראת כל קיץ סריקה שאין מקורות מים עומדים או מקורות אחרים שמביאים יתושים לגן שלנו. יחד עם זאת, מניעה והרחקה של יתושים היא עניין שהשליטה שלנו בו מוגבלת. ממליצים לכם להשתמש בשיטות הטבעיות כמו מריחת שמנים ולשקול לרכוש צמיד מרחיק יתושים ששמים על הרגל של הילד/ה- מנסיוננו זה עוזר מאוד. 
+6. **שמש**: ועוד עם הקיץ, מגיעה השמש הצורבת. החצר שלנו מוצלת ב90% מהשטח שלה, ועדיין השמש בארץ חזקה וחודרת גם את הציליות. אנחנו ממליצים לכם להתחיל למרוח בכל בוקר את האזורים החשופים של הילדימות כדי לשמור על העור העדין שלהם. 
+7. **מים, מים, מים**: כדי להילחם בחום, אבל בעיקר כי אפשר וכי זה ממש כיף - שולחנות המים חזרו לחצרות שלנו! אז, מזכירות להשאיר בתיק בגדי החלפה מלאים ושקית רב פעמית לבגדים מלוכלכים ורטובים :) 
 
+**שבת מנוחה,**
 
-
-שבת מנוחה,
-
-צוות גן ילדי הטבע הדמוקרטי
-
- 
+**צוות גן ילדי הטבע הדמוקרטי**
 
 ## שכבת הצעירים
 
@@ -63,8 +59,6 @@ date: 2022-04-29T12:05:49.228Z
 **מחכות לכם ביום ראשון - לא לשכוח סדינים נקיים ובקבוקים מלאים!** 
 
 **צוות שכבת הצעירים - חוה, מיכל, עדי, בר, שיר, רוני ואולגה**
-
-
 
 ## שכבת הבוגרים
 
